--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "normalize-scss": "^7.0.1",
+    "normalize.css": "^8.0.1",
+    "prettier": "^2.1.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
